# codexmcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: publish.yml
docs/: README_EN.md
docs/plans/: 2026-03-20-mcp-architecture-overhaul.md  2026-03-22-readonly-fallback.md
skills/codexmcp-using/: SKILL.md  troubleshoot.md
skills/codexmcp-using/scenarios/: cli-fallback.md  dispatch.md  parallel.md  review.md
src/codexmcp/: __init__.py  command_builder.py  models.py  server.py  stream_processor.py  task_manager.py  task_pool.py  tmux.py  worktree.py
