[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-mcp-server"
version = "1.1.0"
description = "MCP server for Codex CLI with tmux persistence, git worktree isolation, and async dispatch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
]
authors = [
    { name = "guda.studio", email = "gudaclaude@gmail.com" },
]
license = { text = "MIT" }
keywords = ["mcp", "fastmcp", "codex", "tmux", "worktree", "ai-agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/shilong20/codexmcp"
Repository = "https://github.com/shilong20/codexmcp"

[project.scripts]
codex-mcp-server = "codexmcp.cli:main"
codexmcp = "codexmcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codexmcp"]

[tool.hatch.build.targets.sdist]
include = ["src/codexmcp", "README.md", "LICENSE"]
